objects/ssot__RegulationClauseVersion__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ChangeSummary__c</fullName>
        <label>Change Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ClauseText__c</fullName>
        <label>Clause Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ContentDocumentId__c</fullName>
        <label>Content Document</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EffectiveFromDate__c</fullName>
        <label>Effective From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__EffectiveToDate__c</fullName>
        <label>Effective To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Regulation Clause Version Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsAiGenerated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsAiGenerated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RegulationClauseId__c</fullName>
        <label>Regulation Clause</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Status__c</fullName>
        <label>Status</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1731040473591_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RegulationClauseVersion_ContentDocum_rel</label>
        <referenceTo>ssot__ContentDocument__dlm</referenceTo>
        <relationshipLabel>RegulationClauseVersion_ContentDocum_rel</relationshipLabel>
        <relationshipName>rel_1731040473591_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1731040575999_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RegulationClauseVersion_RegulationCl_rel</label>
        <referenceTo>ssot__RegulationClause__dlm</referenceTo>
        <relationshipLabel>RegulationClauseVersion_RegulationCl_rel</relationshipLabel>
        <relationshipName>rel_1731040575999_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>